--- a/DeskAssistant.Core/DeskAssistant.Core.csproj
+++ b/DeskAssistant.Core/DeskAssistant.Core.csproj
@@ -17,6 +17,7 @@
 
   <ItemGroup>
     <None Remove="Protos\task.proto" />
+    <None Remove="Protos\telegram.proto" />
   </ItemGroup>
 
   <ItemGroup>
@@ -27,6 +28,7 @@
 
   <ItemGroup>
     <Protobuf Include="Protos\task.proto" GrpcServices="Client" />
+    <Protobuf Include="Protos\telegram.proto" GrpcServices="Client" />
   </ItemGroup>
 
 </Project>
