feat: create Notification proto

--- a/DeskAssistant.Core/DeskAssistant.Core.csproj
+++ b/DeskAssistant.Core/DeskAssistant.Core.csproj
@@ -16,6 +16,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="Protos\notification.proto" />
     <None Remove="Protos\task.proto" />
     <None Remove="Protos\telegram.proto" />
   </ItemGroup>
@@ -27,6 +28,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Protobuf Include="Protos\notification.proto" GrpcServices="Client" />
     <Protobuf Include="Protos\task.proto" GrpcServices="Client" />
     <Protobuf Include="Protos\telegram.proto" GrpcServices="Client" />
   </ItemGroup>
